# dprint-plugin-markdown

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  dprint.json  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: ci.yml  publish.yml  release.yml
deployment/: schema.json
deployment/npm/: README.md  index.test.js  package-lock.json  package.json  setup.js
scripts/: generate_release_notes.ts
src/: format_text.rs  lib.rs  wasm_plugin.rs
src/configuration/: builder.rs  configuration.rs  resolve_config.rs  types.rs
src/generation/: gen_types.rs  generate.rs  metadata.rs  mod.rs  utils.rs
src/generation/cmark/: mod.rs  parse_cmark_ast.rs
src/generation/common/: ast_nodes.rs  char_scanner.rs  mod.rs
src/generation/yaml/: mod.rs  parse_yaml_header.rs
src/parsing/: mod.rs  parse.rs  parser_types.rs  utils.rs
src/parsing/cmark/: ast_nodes.rs  mod.rs  parse_cmark_ast.rs
src/parsing/common/: ast_nodes.rs  char_scanner.rs  mod.rs
src/parsing/yaml/: mod.rs  parse_yaml_header.rs
tests/: fuzz_test.rs  newline_test.rs  run_specs_test.rs  spec_test.rs
tests/specs/BlockQuotes/: BlockQuotes_All.txt  BlockQuotes_TextWrap_Always.txt  Callouts.txt  Empty.txt
tests/specs/Code/: Code_Inline.txt  Code_Inline_TextWrap_Always.txt
tests/specs/CodeBlocks/: CodeBlocks_All.txt
tests/specs/General/: CharacterEscapes_All.txt  Deno_All.txt  HardBreaks_All.txt
tests/specs/HorizontalRules/: HorizontalRules_All.txt
tests/specs/IgnoreComments/: IgnoreComments_All.txt  IgnoreComments_Custom.txt
tests/specs/Issues/: Issue0005.txt  Issue0007.txt  Issue0008.txt  Issue0010.txt  Issue0012.txt  Issue0013.txt  Issue0014.txt  Issue0018.txt  Issue0020.txt  Issue0021.txt  Issue0023.txt  Issue0024.txt  Issue0027.txt  Issue0028.txt  Issue0038.txt  Issue0039.txt  Issue0051.txt  Issue0052.txt  Issue0060.txt  Issue0062.txt  Issue0072.txt  Issue0076.txt  Issue0079.txt  Issue0080.txt  Issue0083.txt  Issue0086.txt  Issue0089.txt  Issue0090.txt  Issue0097.txt  Issue0110.txt  Issue0117.txt
tests/specs/Links/: Links_All.txt  Links_TextWrap_Always.txt
tests/specs/Lists/: Lists_All.txt  Lists_ListIndentKind_PythonMarkdown.txt  Lists_ListKind_Asterisks.txt
tests/specs/MathBlocks/: MathBlocks_General.txt  MathBlocks_Spacing.txt
tests/specs/Tables/: Tables_All.txt
tests/specs/TaskListMarker/: HtmlInParagraph.txt  TaskListMarker_All.txt  TaskListMarker_TextWrap_Always.txt
tests/specs/Text/: Text_All.txt  Text_TextWrap_Always.txt  Text_TextWrap_Never.txt
tests/specs/TextDecoration/: TextDecoration_All.txt  TextDecoration_EmphasisKind_Asterisks.txt  TextDecoration_StrongKind_Underscores.txt
tests/specs/YamlHeader/: YamlHeaderFollowedByHtml.txt  YamlHeader_All.txt
tests/specs/footnotes/: Footnote_Paragraph.txt
tests/specs/headers/: Headers_All.txt  Headers_All_Setext.txt  Headers_Setext_TextWrap_Always.txt
tests/specs/html/: Html_TextWrap_Always.txt
tests/specs/paragraphs/: Paragraphs_All.txt  Paragraphs_TextWrap_Always.txt
(+12 files in other folders)
