[package]
name = "dprint-plugin-markdown"
version = "0.12.2"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-markdown"
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-markdown"
description = "Markdown formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[dependencies]
anyhow = "1.0.56"
dprint-core = { version = "0.51.0", features = ["formatting"] }
pulldown-cmark = { version = "0.9.1", default-features = false }
regex = "1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.7.0"
serde_json = { version = "1.0" }
